<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Listadapter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_operations">Operations</string>
    <string name="title_activity_loginscreen">Loginscreen</string>
    <string name="title_activity_counters">Counters</string>
    <string name="title_activity_countries">Countries</string>

    <string-array name="countries_list">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Australia</item>
        <item>Bangladesh</item>
        <item>Bhutan</item>
        <item>England</item>
        <item>Finland</item>
        <item>India</item>
        <item>Saudi Arabia</item>
        <item>Nepal</item>
    </string-array>

    <string name="oper_no1">NumberOne</string>
    <string name="oper_no2">NumberTwo</string>
    <string name="oper_result">Result:</string>
    <string name="operbtn_add">Addition</string>
    <string name="operbtn_sub">Subtraction</string>
    <string name="log_uname">Username</string>
    <string name="log_pwd">Password</string>
    <string name="log_checkbox">Show password</string>
    <string name="btn_back">Back</string>
    <string name="counter_number">Enter Number</string>
    <string name="tv_results">Result</string>
    <string name="btn_increament">Increament</string>
    <string name="btn_decreament">Decreament</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="cs_username">Jully</string>
    <string name="cs_phoneno">0712 345 678</string>
    <string name="title_activity_call">CallActivity</string>

</resources>
