<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_enternum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter_number"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etcounter_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_results" />

    <Button
        android:id="@+id/btn_increament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_increament"
        android:background="@drawable/buttons_style" />

    <Button
        android:id="@+id/btn_decreament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_decreament" />

</LinearLayout>
