<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvlog_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_uname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etlog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvlog_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etlog_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cblog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_checkbox" />

    <Button
        android:id="@+id/btnlog_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:background="@drawable/buttons_style" />

</LinearLayout>
